--- a/.travis.yml
+++ b/.travis.yml
@@ -62,9 +62,17 @@ matrix:
         - export PATH=$PATH:"/c/java8/bin"
         - export JAVA_HOME="/c/java8"
         - choco install maven
+      before_script:
+        - export -f travis_nanoseconds
+        - export -f travis_fold
+        - export -f travis_time_start
+        - export -f travis_time_finish
       script:
+        travis_fold start win-oraclejdk8-IT
+        # execute commands here
         - java -version
         - mvn clean integration-test
+        travis_fold end "name.of.fold"
 #    - os: windows
 #      language: c
 #      name: win-oraclejdk11
