--- a/.travis.yml
+++ b/.travis.yml
@@ -120,9 +120,17 @@ matrix:
         - export GOPATH="$GOPATH:$TRAVIS_BUILD_DIR/tsfile-go"
         - go get -v github.com/golang/snappy
       script: go test -v tsfile/...
-
     - os: linux
       name: linux-tsfile-go
+      language: go
+      go:
+        - 1.10.x
+      install:
+        - export GOPATH="$GOPATH:$TRAVIS_BUILD_DIR/tsfile-go"
+        - go get -v github.com/golang/snappy
+      script: go test -v tsfile/...
+    - os: windows
+      name: windows-tsfile-go
       language: go
       go:
         - 1.10.x
