--- a/iotdb/iotdb/conf/iotdb-cluster.properties
+++ b/iotdb/iotdb/conf/iotdb-cluster.properties
@@ -55,14 +55,14 @@ task_timeout_ms = 1000
 num_of_virtula_nodes = 2
 
 # Max number of use inner rpc client
-max_num_of_inner_rpc_client = 50;
+max_num_of_inner_rpc_client = 50
 
 # Max number of queue length to use inner rpc client, the request which exceed to this
 # number will be rejected.
 max_queue_num_of_inner_rpc_client = 50
 
-# ReadMetadataConsistencyLevel: 1 Strong consistency, 2 Weak consistency
+# ReadMetadataConsistencyLevel: 1  Strong consistency, 2  Weak consistency
 read_metadata_consistency_level = 1
 
-# ReadDataConsistencyLevel: 1 Strong consistency, 2 Weak consistency
+# ReadDataConsistencyLevel: 1  Strong consistency, 2  Weak consistency
 read_data_consistency_level = 1
