--- a/iotdb-cli/pom.xml
+++ b/iotdb-cli/pom.xml
@@ -44,6 +44,11 @@
             <version>0.8.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.iotdb</groupId>
+            <artifactId>IoTDB-cluster</artifactId>
+            <version>0.8.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
             <version>${common.cli.version}</version>
@@ -57,6 +62,11 @@
             <groupId>jline</groupId>
             <artifactId>jline</artifactId>
             <version>${jline.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.airlift</groupId>
+            <artifactId>airline</artifactId>
+            <version>0.8</version>
         </dependency>
     </dependencies>
     <build>
