print apache-rat violation result on console

--- a/pom.xml
+++ b/pom.xml
@@ -178,6 +178,7 @@
                     <groupId>org.apache.rat</groupId>
                     <artifactId>apache-rat-plugin</artifactId>
                     <configuration>
+                        <consoleOutput>true</consoleOutput>
                         <excludes>
                             <!-- Git related files -->
                             <exclude>**/.git/**</exclude>
