--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@ iotdb/iotdb/data/*
 iotdb/iotdb/gc.log*
 iotdb/iotdb/logs/*
 iotdb/iotdb/lib/*
-iotdb/overflow/
-iotdb/testoverflowfile
+iotdb/unsequence/
+iotdb/testunsequence
 
 tsfile/src/test/resources/perTestInputData
 # Eclipse IDE files
